hphp/hack/test/typecheck/yield/asyncgen5.php.exp
File "asyncgen5.php", line 7, characters 15-47:
Invalid return type (Typing[4110])
  File "asyncgen5.php", line 7, characters 15-47:
  Expected `AsyncGenerator<int, string, void>`
  File "asyncgen5.php", line 7, characters 15-47:
  But got `Generator<[unresolved], [unresolved], [unresolved]>` (result of function containing a `yield`)
